--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
+:root{
+    --sky-blue:#46A3FF;
+    --dark-color:#3C3C3C;
+    --skin-color:#FFD1A4;
+    --dark-blue:#005AB5;
+}
+
 *{
     margin: 0;
     padding: 0;
 }
 .container h1{
 text-align: center;
+}
+body{
+    background-color:var(--dark-color) ;
+    color: var(--skin-color);
 }
 .container{
     display: flex;
@@ -12,16 +23,36 @@ text-align: center;
 
 }
 .donwload{
-display: flex;
-flex-direction: column;
-align-items: center;
-width: 50%;
+max-width: 600px;
+min-width: 300px;
+width: 70%;
 }
-.data{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+td{
+    text-align: center;
     font-size: 20px;
-    max-width: 400px;
 }
+.data a{
+    padding: 5px;
+    color: var(--sky-blue);
+text-decoration: none;
+
+border-radius: 15px;
+}
+.data a:hover{
+    text-decoration: underline;
+}
+
+.name{
+  
+ max-width:70px;
+    overflow: hidden;
+    white-space: nowrap;
+   text-overflow: ellipsis;
+}
+.type{
+    color:white;
+}
+.size{
+    color: red;
+}
+
